--- a/src/app/courses/containers/course-form/course-form.component.html
+++ b/src/app/courses/containers/course-form/course-form.component.html
@@ -1,33 +1,42 @@
 <mat-card>
 
-  <mat-card-content>
-    <mat-toolbar color="primary"> <span>Pneumoultramicroscópicossilicovulcanoconiótico</span></mat-toolbar>
+  <div class="table-flex mat-elevation-z8">
 
-    <form [formGroup]="form">
-      <mat-form-field class="example-full-width">
-        <!-- <mat-label>Favorite food</mat-label> -->
-        <input matInput placeholder="Nome" formControlName="name">
-      </mat-form-field>
+    <mat-card-content>
+      <mat-toolbar color="primary"> <span>Pneumoultramicroscópicossilicovulcanoconiótico</span></mat-toolbar>
 
-      <mat-form-field class="example-full-width">
-        <mat-select formControlName="category" placeholder="Categories">
-           <mat-option [value]="null">Categories</mat-option> <!-- Foi configurado como null para poder utilizar "categoty = vazio" -->
-          <mat-option value="agiota">Agióta</mat-option>
-          <mat-option value="hitman">Hitman</mat-option>
-          <mat-option value="contar cartas">Contar cartas</mat-option>
-          <mat-option value="171">171</mat-option>
-        </mat-select>
-      </mat-form-field>
+      <form [formGroup]="form">
+        <mat-form-field class="example-full-width">
+          <!-- <mat-label>Favorite food</mat-label> -->
+          <input matInput placeholder="Nome" formControlName="name">
+        </mat-form-field>
 
-    </form>
-  </mat-card-content>
+        <mat-form-field class="example-full-width">
+          <mat-select formControlName="category" placeholder="Categories">
+            <mat-option [value]="null">Categories</mat-option>
+            <!-- Foi configurado como null para poder utilizar "categoty = vazio" -->
+            <mat-option value="agiota">Agióta</mat-option>
+            <mat-option value="hitman">Hitman</mat-option>
+            <mat-option value="contar cartas">Contar cartas</mat-option>
+            <mat-option value="171">171</mat-option>
+          </mat-select>
+        </mat-form-field>
 
-  <mat-card-actions>
+      </form>
+    </mat-card-content>
 
-    <button mat-raised-button color="primary" (click)="onSubmit()">Salve</button>
-    <button mat-raised-button (click)="onCancel()">List</button>
+    <mat-card-actions>
+      <button class="button-yes-class" mat-raised-button color="primary" (click)="onSubmit()">Salve</button>
+      <button class="button-no-class" mat-raised-button (click)="onCancel()">List</button>
 
+      <div class="slide-class">
+        <div class="text-class">Salvar e redirecionar
+          <mat-slide-toggle (change)="onToggleChange($event)"></mat-slide-toggle>
+        </div>
+      </div>
 
-  </mat-card-actions>
+    </mat-card-actions>
+
+  </div>
 
 </mat-card>
