--- a/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.html
+++ b/src/app/shared/components/confirmation-dialog/confirmation-dialog.component.html
@@ -2,6 +2,6 @@
   <p>{{ data }}</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onConfirm(true)">Sim</button>
-  <button mat-button (click)="onConfirm(false)">Não</button>
+  <button mat-button (click)="onConfirm(true)" color="primary">Sim</button>
+  <button mat-button (click)="onConfirm(false)" color="accent">Não</button>
 </div>
